--- a/src/main/app/lms-frontend/src/App.css
+++ b/src/main/app/lms-frontend/src/App.css
@@ -2,20 +2,19 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  height: 40px;
+  width: 70px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav{
+  flex-direction: row;
 }
 .twitle{
   background-color: #624BA5;
 }
 .title {
+  position: fixed;
+  width: 100%;
   background-color: #624BA5;
   min-height: 10vh;
   flex-direction: column;
@@ -40,14 +39,4 @@
   background-color: #624BA5;
   text-align: center;
   color: white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
