--- a/src/main/app/lms-frontend/src/Style/login.css
+++ b/src/main/app/lms-frontend/src/Style/login.css
@@ -1,6 +1,6 @@
 .mainContainer {
   position: absolute;
-  top: 150px;
+  top: 120px;
   background-color: rgba(100, 148, 237, 0.174);
   border-top-left-radius: 130px;
   border-top-right-radius: 180px;
@@ -18,6 +18,7 @@
   min-height: 550px;
   position: absolute;
   left: 0;
+  top: 0;
   z-index: -10;
 }
 .imag-container{
