--- a/src/main/app/lms-frontend/src/App.css
+++ b/src/main/app/lms-frontend/src/App.css
@@ -10,12 +10,12 @@
   flex-direction: row;
 }
 .twitle{
-  background-color: #624BA5;
+  background-color: #FFFFFF;
 }
 .title {
   position: fixed;
   width: 100%;
-  background-color: #624BA5;
+  background-color: #FFFFFF;
   min-height: 10vh;
   flex-direction: column;
   align-items: center;
@@ -35,8 +35,9 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 50px;
-  background-color: #624BA5;
+  height: 15px;
+  background-color: #0257b8;
   text-align: center;
   color: white;
+  font-size: xx-small;
 }
