--- a/src/main/app/lms-frontend/src/Style/login.css
+++ b/src/main/app/lms-frontend/src/Style/login.css
@@ -1,14 +1,15 @@
 .mainContainer {
   position: absolute;
   top: 120px;
-  background-color: rgba(148, 189, 255, 0.151);
+  background-color: #E7E7E7;
   border-top-left-radius: 130px;
   border-top-right-radius: 180px;
   border-bottom-left-radius: 80px;
   border-bottom-right-radius: 150px;
-  min-height: 420px;
+  height: 60vh;
   min-width: 480px;
   left: -10px;
+  overflow: hidden;
 }
 .errorLabel{
   padding: 5px;
@@ -20,7 +21,7 @@
   flex-direction: row;
   background-color:#FFFFFF;
   min-width:100%;
-  min-height: 550px;
+  height: 50vh;
   position: absolute;
   left: 0;
   top: 0;
@@ -50,14 +51,14 @@
   width: 300px;
   font-size: large;
   border-radius: 8px;
-  border: 1px solid #0257b8;
+  border: 1px solid #0155B7;
   padding-left: 8px;
   margin-left: 80px;
   background-color: rgba(148, 189, 255, 0.151);
   
 }
 .inputBox :focus{
-  border: 1px solid #0257b8;
+  border: 1px solid #0155B7;
 }
 
 .inputButton {
@@ -65,7 +66,7 @@
   width: 300px;
   font-size: large;
   border-radius: 8px;
-  border: 1px solid #0257b8;
+  border: 1px solid #0155B7;
   background-color: rgba(148, 189, 255, 0.151);
   padding-left: 8px;
   margin-left: 80px;
