--- a/src/main/app/lms-frontend/src/components/department/DepartmentDashboardComponent.css
+++ b/src/main/app/lms-frontend/src/components/department/DepartmentDashboardComponent.css
@@ -6,9 +6,14 @@
 .page-header {
     text-align: left;
     justify-content: center;
-    height: 20vh;
-    background-color: #1976D2;
+    height: 40vh;
+    background-color: #BDBDBD;
     margin-top: 10vh;
     margin-bottom: 5vh;
     color: white;
+    background-image: url("./../../image/exam.png");
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
+    padding: 100px;
 }
