--- a/src/main/app/lms-frontend/src/components/staff/StaffDashboardComponent.css
+++ b/src/main/app/lms-frontend/src/components/staff/StaffDashboardComponent.css
@@ -3,12 +3,22 @@
     flex-direction: column;
     margin-top: 100px;
 }
-.page-header {
+.emploee-page-header {
     text-align: left;
     justify-content: center;
-    height: 20vh;
-    background-color: #1976D2;
+    height: 40vh;
+    background-color: #BDBDBD;
     margin-top: 10vh;
     margin-bottom: 5vh;
     color: white;
+    background-image: url("./../../image/employee.png");
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
+    padding: 100px;
+}
+button{
+    all: unset;
+    border: 1px solid #FFFFFF;
+    padding: 5px;
 }
