--- a/src/main/app/lms-frontend/src/App.css
+++ b/src/main/app/lms-frontend/src/App.css
@@ -1,10 +1,9 @@
-.App {
-  text-align: center;
-}
+
 
 .logo {
   height: 40px;
   width: 70px;
+  float: left;
 }
 .nav{
   flex-direction: row;
@@ -24,20 +23,4 @@
   font-weight: bold;
   padding: 10px;
   color: white;
-}
-
-
-.App-link {
-  color: #61dafb;
-}
-
-.footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 15px;
-  background-color: #0257b8;
-  text-align: center;
-  color: white;
-  font-size: xx-small;
 }
