--- a/src/main/app/lms-frontend/src/components/dashboard/dashboard.css
+++ b/src/main/app/lms-frontend/src/components/dashboard/dashboard.css
@@ -1,3 +1,9 @@
+#root {
+  margin: 0 auto; 
+  text-align: center;
+  width :100% !important;   
+}
+
 .parent-container{
   display: flex;
   flex-direction: row;
@@ -18,7 +24,7 @@
 }
 .text-ovrlay-backdrop{
   position: absolute;
-  top: 15vh;
+  top: 56vh;
   left: 0;
   width: 100%;
   backdrop-filter: blur(25px);
