--- a/src/main/app/lms-frontend/src/components/department/DepartmentDashboardComponent.css
+++ b/src/main/app/lms-frontend/src/components/department/DepartmentDashboardComponent.css
@@ -1,3 +1,9 @@
+#root {
+    margin: 0 auto; 
+    text-align: center;
+    width :100% !important;   
+  }
+
 .parent-container{
     display: flex;
     flex-direction: row;
