--- a/src/main/app/lms-frontend/src/components/staff/StaffDashboardComponent.css
+++ b/src/main/app/lms-frontend/src/components/staff/StaffDashboardComponent.css
@@ -1,3 +1,8 @@
+#root {
+    margin: 0 auto; 
+    text-align: center;
+    width :100% !important;   
+  }
 .parent-container{
     display: flex;
     flex-direction: column;
