--- a/src/main/app/lms-frontend/src/Style/login.css
+++ b/src/main/app/lms-frontend/src/Style/login.css
@@ -27,6 +27,26 @@
   left: -10px;
   overflow: hidden;
 }
+
+.mainContainer-reg {
+  animation: appear  linear .5s;
+  animation-fill-mode: forwards;
+  position: absolute;
+  top:0;
+  background-color: #E7E7E7;
+  border-top-left-radius: 130px;
+  border-top-right-radius: 180px;
+  border-bottom-left-radius: 80px;
+  border-bottom-right-radius: 150px;
+  height: 80vh;
+  min-width: 480px;
+  left: -10px;
+  overflow: hidden;
+}
+
+
+
+
 .errorLabel{
   padding: 5px;
   width: 170px;
@@ -87,6 +107,9 @@
   background-color: rgba(148, 189, 255, 0.151);
   padding-left: 8px;
   margin-left: 80px;
+}
+.select{
+  margin-left: -185px;
 }
 .inputButton-reg {
   height: 48px;
