--- a/src/main/app/lms-frontend/src/components/StudentDashboard/StudentPage.css
+++ b/src/main/app/lms-frontend/src/components/StudentDashboard/StudentPage.css
@@ -1,25 +1,84 @@
-.student-page {
-    margin-top: 50px;
-}
-
 .card-row {
+    margin-top: 50px;
+    max-width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin: 10px;
+    align-items: center;
+    /* min-height: 120px; */
 }
 
-.card-container {
-    padding: 25px;
+
+.card-row.card {
+    border: none !important;
+    border: 1px solid #FFFFFF !important;
 }
 
-.card {
-    color: #000000;
-    border: 1px solid #000000;
+.card:hover {
+    border: 1px solid #0257b8 !important;
+    color: #0257b8 !important;
 }
 
-.card-header {
-    background-color: #1976d2b4;
-    color: #FFFFFF;
-    border-bottom: 1px solid #000000;
+.card-row .card .header {
+    background-color: #E7E7E7 !important;
+    text-align: left !important;
+    padding: 10px !important;
+    background: 5px !important;
+}
+
+.card-row .card .header button {
+    background-color: #FFFFFF !important;
+    border: 1px solid #E7E7E7 !important;
+    border-radius: 10px;
+    padding: 5px !important;
+    float: right;
+    margin: 5px !important;
+    color: #000;
+}
+
+.card-row .card .header button:hover {
+    border: 1px solid #0257b8 !important;
+    color: #0257b8 !important;
+    font-weight: bold;
+}
+
+.card-row .card:hover {
+
+    border: 1px solid #0257b8 !important;
+    color: #0257b8 !important;
+}
+
+.card-row-3 {
+    display: flex;
+}
+
+.card-row-3 button {
+    border: 1px solid #E7E7E7 !important;
+    border-radius: 10px;
+    width: 100px !important;
+}
+
+.card-row-3 button:hover {
+    border: 1px solid #0257b8 !important;
+    border-radius: 10px;
+    color: #0257b8 !important;
+}
+
+.card-row-3 .card {
+    padding: 3px !important;
+}
+
+.data-table {
+    min-height: 80px;
+}
+
+.details-page {
+    display: flex;
+}
+
+.header-title {
+    background-color: #E6E6E6;
+    border: .5px solid #555565 !important;
+    height: 52px;
+    font-weight: bold;
+    color: 555555;
 }
