--- a/src/main/app/lms-frontend/src/components/StudentDashboard/StudentPage.css
+++ b/src/main/app/lms-frontend/src/components/StudentDashboard/StudentPage.css
@@ -55,6 +55,7 @@
     border: 1px solid #E7E7E7 !important;
     border-radius: 10px;
     width: 100px !important;
+    float: right;
 }
 
 .card-row-3 button:hover {
@@ -81,4 +82,38 @@
     height: 52px;
     font-weight: bold;
     color: 555555;
+}
+
+.detail-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.detail-label-1 {
+    width: 365px;
+    height: 29px;
+    background-color: #FFFFFF;
+    border-right: 1px solid #555565 !important;
+}
+
+.detail-label-2 {
+    width: 365px;
+    height: 29px;
+    border-right: 1px solid #555565 !important;
+    background-color: #ececec;
+}
+
+.label-1 {
+    width: 110px;
+    height: 29px;
+    background-color: #FFFFFF;
+    border-right: 1px solid #555565 !important;
+}
+
+.label-2 {
+    width: 110px;
+    height: 29px;
+    border-right: 1px solid #555565 !important;
+    background-color: #ececec;
 }
